# vlfeat

./: CMakeLists.txt
CMake/: Config.cmake.in  Utils.cmake  vlfeatConfig.cmake.in  vlfeatConfigVersion.cmake.in
src/: CMakeLists.txt  sift.c
vl/: CMakeLists.txt  covdet.c  covdet.h  generic.c  generic.h  host.h  sift.c  sift.h
