INCLUDE_DIRECTORIES(".")

# list sources files
FILE(GLOB LIBRARY_FILES_C "*.c" "*.tc")
FILE(GLOB LIBRARY_FILES_H "*.h")
FILE(GLOB LIBRARY_FILES_TH "*.th")

c_library_with_type_no_pch(vlfeat "" "" "${c_default}" ${LIBRARY_FILES_C} ${LIBRARY_FILES_H} ${LIBRARY_FILES_TH})

SET_TARGET_PROPERTIES(vlfeat PROPERTIES
	PUBLIC_HEADER "${LIBRARY_FILES_H}")
INSTALL(TARGETS vlfeat
	EXPORT vlfeatTargets
	LIBRARY DESTINATION "${INSTALL_LIB_DIR}" COMPONENT "lib"
	ARCHIVE DESTINATION "${INSTALL_LIB_DIR}" COMPONENT "lib"
	PUBLIC_HEADER DESTINATION "${INSTALL_INCLUDE_DIR}" COMPONENT dev)
