INCLUDE_DIRECTORIES(".")

# list sources files
FILE(GLOB LIBRARY_FILES_C "*.c" "*.tc")
FILE(GLOB LIBRARY_FILES_H "*.h")
FILE(GLOB LIBRARY_FILES_TH "*.th")

# Target
if(BUILD_SHARED_LIBS)
  set(LIBRARY_TYPE SHARED)
else()
  set(LIBRARY_TYPE STATIC)
endif()
c_library_with_type_no_pch(${LIBRARY_NAME} "Libs" "${LIBRARY_TYPE}" "${c_default}" ${LIBRARY_FILES_C} ${LIBRARY_FILES_H} ${LIBRARY_FILES_TH})

# Install library
install(TARGETS ${LIBRARY_NAME}
	EXPORT ${PROJECT_EXPORT}
	RUNTIME DESTINATION "${INSTALL_BIN_DIR}" COMPONENT bin
	LIBRARY DESTINATION "${INSTALL_LIB_DIR}" COMPONENT shlib
	ARCHIVE DESTINATION "${INSTALL_LIB_DIR}" COMPONENT stlib
	COMPONENT dev)

# Install headers
install(FILES ${LIBRARY_FILES_H}
	DESTINATION "${INSTALL_INCLUDE_DIR}/${LIBRARY_FOLDER}" )
